A mini microservice app/infra/k8s/posts-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: moderations
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
